Add object model for formdata as activity and conversation data

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 
     <developers>
         <developer>
-            <name>Ahmad Bappi</name>
-            <email>ahmad.bappi@experflow.com</email>
+            <name>Amna Zahid</name>
+            <email>amna.zahid@experflow.com</email>
             <organization>ExpertFlow</organization>
             <organizationUrl>https://www.expertflow.com/</organizationUrl>
         </developer>
